# medinote-ai-ambient

./: pyproject.toml  requirements.txt  vercel.json
