[project]
name = "medinote-api"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "setuptools<70.0.0",
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "pydantic==2.5.2",
    "aiofiles==23.2.1"
]
